#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#  $Revision$
#
# Description:
#  ChangeLog file for package CalibManager
#------------------------------------------------------------------------

Package author: Mikhail S. Dubrovin

Please describe any modifications that you made to the package in the
reverse time order.

2015-07-02 Mikhail S. Dubrovin
Tag: V00-00-96
- Improve ROI Mask GUI performance (PSAS-6)
  - GUIMaskEditor
    - button color change if med window is closed by itself
    - use cp parameters for med
    - set tooltips for all fields
    - add gu.confirm_or_cancel_dialog_box befroe file selection dialog to reset file name to empty 
      for np.once()   
  - ConfigParametersForApp - add 4 pars for for med - mask editor command line launched in GUIMaskEditor
  - GlobalUtils.load_textfile() - add loading text from *.npy file for GUIFileBrowser.py

2015-06-02 Mikhail S. Dubrovin
Tag: V00-00-95
- ConfigFileGenerator - add :stream=0-79: in dataset description (PSAS-6)

2015-05-20 Mikhail S. Dubrovin
Tag: V00-00-94
- ConfigParametersForApp.py - add type geometry in the list of types for pnccd.

2015-05-19 Mikhail S. Dubrovin
Tag: V00-00-93
- CommandLineCalib.py - fix bug timeout_sec -> self.timeout_sec (PSAS-6)
	
2015-05-18 Mikhail S. Dubrovin
Tag: V00-00-92
- add parameter cp.job_timeout_sec for calibrun and its configuration in GUIConfigPars (PSAS-6) 
	
2015-05-13 Mikhail S. Dubrovin
Tag: V00-00-91
- PlotImgSpeWidget.py - add number of entries to histogram info.
	
2015-05-13 Mikhail S. Dubrovin
Tag: V00-00-90
- Save Princeton calib files WITH metadata, modified: ConfigFileGenerator.py and psana-module-peds-aver-princeton.cfg (PSAS-6) 
	
2015-05-04 Mikhail S. Dubrovin
Tag: V00-00-89
- add parameter cp.mask_rms_thr_min and propagate it in calibman/calibrun code along with cp.mask_rms_thr (PSAS-6) 
	
2015-04-17 Mikhail S. Dubrovin
Tag: V00-00-88